created skeleton of index.html

--- a/index.html
+++ b/index.html
@@ -13,9 +13,32 @@
         <h2>A Junior Software Developer based in London, England.</h2>
     </header>
     <main>
-        <h3>About Me</h3>
-        <img src="kat_portfolio_pic.png" alt="Katherine"/>
+        <div>
+            <h3>About Me</h3>
+            <img src="kat_portfolio_pic.png" alt="Katherine" width="700px">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam commodi laboriosam sint cupiditate quas rerum quasi officia deleniti tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, consectetur aspernatur laboriosam animi libero id assumenda similique dolorum nemo laudantium soluta sunt deleniti corporis qui distinctio repudiandae ipsa, quia esse.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis expedita delectus, soluta a natus tenetur pariatur iure ipsum porro, consequuntur cupiditate eum officiis corporis quidem necessitatibus corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam a? A error sequi, culpa officia, recusandae facilis ex cumque enim aperiam et maxime, soluta at!</p>
+        </div>
+        <div>
+            <h4>Technical SKills</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis minus magnam laudantium nam, quia obcaecati corrupti molestiae nulla consectetur non eius reprehenderit nisi. Omnis dolore quas hic alias asperiores?</p>
+
+        </div>
+        <div>
+            <h5>My Projects</h5>
+            <p>Client Project</p>
+            <p>Client Project</p>
+            <p>Client Project</p>
+        </div>
+        <footer>
+            <button>Github</button>
+            <button>LinkedIn</button>
+            <button>CV</button>
+            <a href="katherine.villacis@nology.io"
+        </footer>
+
     </main>
+    <aside></aside>
 
     
 </body>
