added footer to index.html

--- a/index.html
+++ b/index.html
@@ -22,19 +22,40 @@
         <div>
             <h4>Technical SKills</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis minus magnam laudantium nam, quia obcaecati corrupti molestiae nulla consectetur non eius reprehenderit nisi. Omnis dolore quas hic alias asperiores?</p>
+            <div class="technical-skills">
+                <p>Spring Boot</p>
+                <p>Java</p>
+                <p>React</p>
+                <p>BEM</p>
+                <p>SCSS</p>
+                <p>JavaScript</p>
+                <p>CSS3</p>
+                <p>HTML5</p>
+                <p>Git</p>
+            </div>
 
         </div>
         <div>
             <h5>My Projects</h5>
-            <p>Client Project</p>
-            <p>Client Project</p>
-            <p>Client Project</p>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos tenetur, voluptatem repellendus numquam laboriosam esse, amet blanditiis provident minus voluptatibus consequuntur, aperiam harum doloribus magnam illum. Repudiandae asperiores error atque.</p>
+            <button>Code</button>
+            <button>Preview</button>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci vitae, itaque tempora saepe doloremque iste dolorum sit! Totam debitis alias non corporis sit officiis, quod tempora sed consequuntur corrupti iusto.</p>
+            <button>Code</button>
+            <button>Preview</button>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
+            <button>Code</button>
+            <button>Preview</button>
         </div>
+        <br>
         <footer>
             <button>Github</button>
             <button>LinkedIn</button>
             <button>CV</button>
-            <a href="katherine.villacis@nology.io"
+            <a href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
         </footer>
 
     </main>
