--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="style.css">
     <title>Katherine's Portfolio</title>
 </head>
+<nav>
+    <p>Katherine Villacis</p>
+    <a href="#home">Home</a>
+    <a href="#about-me">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#get-in-touch">Get In Touch</a>
+</nav>
 <body>
-    <header>
+    <header id="home">
         <h1>Hey! I'm Katherine Villacis</h1>
         <h2>A Junior Software Developer based in London, England.</h2>
+        <img src="" alt="Software Developer" width="38rem" height="38rem">
     </header>
     <main>
-        <div>
+        <div id="about-me">
             <h3>About Me</h3>
-            <img src="kat_portfolio_pic.png" alt="Katherine" width="700px">
+            <img src="kat_portfolio_pic.png" alt="Katherine" height="400rem">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam commodi laboriosam sint cupiditate quas rerum quasi officia deleniti tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, consectetur aspernatur laboriosam animi libero id assumenda similique dolorum nemo laudantium soluta sunt deleniti corporis qui distinctio repudiandae ipsa, quia esse.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis expedita delectus, soluta a natus tenetur pariatur iure ipsum porro, consequuntur cupiditate eum officiis corporis quidem necessitatibus corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam a? A error sequi, culpa officia, recusandae facilis ex cumque enim aperiam et maxime, soluta at!</p>
         </div>
@@ -35,7 +43,7 @@
             </div>
 
         </div>
-        <div>
+        <div id="projects">
             <h5>My Projects</h5>
             <h6>Client Project</h6>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos tenetur, voluptatem repellendus numquam laboriosam esse, amet blanditiis provident minus voluptatibus consequuntur, aperiam harum doloribus magnam illum. Repudiandae asperiores error atque.</p>
@@ -49,9 +57,21 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
             <button>Code</button>
             <button>Preview</button>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
+            <button>Code</button>
+            <button>Preview</button>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
+            <button>Code</button>
+            <button>Preview</button>
+            <h6>Client Project</h6>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
+            <button>Code</button>
+            <button>Preview</button>
         </div>
         <br>
-        <footer>
+        <footer id="get-in-touch">
             <button>Github</button>
             <button>LinkedIn</button>
             <button>CV</button>
