--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Katherine's Portfolio</title>
 </head>
-<nav>
+<nav id="nav-bar">
     <p>Katherine Villacis</p>
     <a href="#home">Home</a>
     <a href="#about-me">About</a>
@@ -18,12 +18,12 @@
     <header id="home">
         <h1>Hey! I'm Katherine Villacis</h1>
         <h2>A Junior Software Developer based in London, England.</h2>
-        <img src="" alt="Software Developer" width="38rem" height="38rem">
+        <img src="female_programmer_icon.jpg" alt="Female Software Developer" width="38rem" height="38rem">
     </header>
     <main>
         <div id="about-me">
             <h3>About Me</h3>
-            <img src="kat_portfolio_pic.png" alt="Katherine" height="400rem">
+            <img src="kat_portfolio_pic.png" alt="Katherine" width="20rem">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam commodi laboriosam sint cupiditate quas rerum quasi officia deleniti tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, consectetur aspernatur laboriosam animi libero id assumenda similique dolorum nemo laudantium soluta sunt deleniti corporis qui distinctio repudiandae ipsa, quia esse.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis expedita delectus, soluta a natus tenetur pariatur iure ipsum porro, consequuntur cupiditate eum officiis corporis quidem necessitatibus corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam a? A error sequi, culpa officia, recusandae facilis ex cumque enim aperiam et maxime, soluta at!</p>
         </div>
