--- a/index.html
+++ b/index.html
@@ -44,32 +44,67 @@
 
         </div>
         <div id="projects">
-            <h5>My Projects</h5>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos tenetur, voluptatem repellendus numquam laboriosam esse, amet blanditiis provident minus voluptatibus consequuntur, aperiam harum doloribus magnam illum. Repudiandae asperiores error atque.</p>
-            <button>Code</button>
-            <button>Preview</button>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci vitae, itaque tempora saepe doloremque iste dolorum sit! Totam debitis alias non corporis sit officiis, quod tempora sed consequuntur corrupti iusto.</p>
-            <button>Code</button>
-            <button>Preview</button>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
-            <button>Code</button>
-            <button>Preview</button>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
-            <button>Code</button>
-            <button>Preview</button>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
-            <button>Code</button>
-            <button>Preview</button>
-            <h6>Client Project</h6>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, libero illum! Animi recusandae eos labore autem consequuntur sunt tenetur expedita voluptas dolorem, saepe omnis hic vitae aut eum, beatae aspernatur?</p>
-            <button>Code</button>
-            <button>Preview</button>
-        </div>
+            <h1>My Projects</h1>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
+            <div class="card">
+                <img class="card__image" scr="" alt="Project Image" width="700px">
+                <main class="card__content">
+                    <h2 class="card__image-descriptor">REACT</h2>
+                    <h3 class="card__header">Client Project</h3>
+                    <p class="card__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur omnis voluptatum mollitia provident fugiat, dignissimos quisquam eaque quidem voluptates nam tempora temporibus iste culpa cumque quo ipsam aut! Reprehenderit, laudantium.</p>
+                    <button class="card__button">Code</button>
+                    <button class="card__button--secondary">Preview</button>
+                </main>
+            </div>
         <br>
         <footer id="get-in-touch">
             <button>Github</button>
