updated nav bar styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Katherine's Portfolio</title>
 </head>
 <body>
-    <nav id="nav-bar">
+    <nav class="nav">
         <p>Katherine Villacis</p>
         <a href="#home">Home</a>
         <a href="#about-me">About</a>
