added logos to skills on index.html

--- a/index.html
+++ b/index.html
@@ -65,39 +65,39 @@
         </p>
         <div class="skills__container">
           <div class="skills__container--item">
-            <img src="" alt="Spring Boot Logo" />
+            <img src="VectorSpringBoot.png" alt="Spring Boot Logo" />
             <p>Spring Boot</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="Java Logo" />
+            <img src="VectorJava.png" alt="Java Logo" />
             <p>Java</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="React Logo" />
+            <img src="GroupReact.png" alt="React Logo" />
             <p>React</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="BEM Logo" />
+            <img src="LogoBEM.png" alt="BEM Logo" />
             <p>BEM</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="SCSS Logo" />
+            <img src="VectorCSS3.png" alt="SCSS Logo" />
             <p>SCSS</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="JavaScript Logo" />
+            <img src="VectorJS.png" alt="JavaScript Logo" />
             <p>JavaScript</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="CSS3 Logo" />
+            <img src="VectorCSS3.png" alt="CSS3 Logo" />
             <p>CSS3</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="HTML5 Logo" />
+            <img src="VectorHTML5.png" alt="HTML5 Logo" />
             <p>HTML5</p>
           </div>
           <div class="skills__container--item">
-            <img src="" alt="Git Logo" />
+            <img src="VectorGit.png" alt="Git Logo" />
             <p>Git</p>
           </div>
         </div>
