made chnages to skills styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#get-in-touch">Get In Touch</a>
     </nav>
     <header class="intro">
-      <h1 class="intro__name">Hey! I'm Katherine Villacis.</h1>
+      <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
       <h2 class="into__occupation">
         A Junior Software Developer based in London, England.
       </h2>
