added code symbol to buttons in cards

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div id="projects">
         <h1>My Projects</h1>
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
@@ -121,7 +121,7 @@
           </main>
         </div>
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
@@ -136,7 +136,7 @@
           </main>
         </div>
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
@@ -154,7 +154,7 @@
 
       <div id="projects__secondary">
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
@@ -169,7 +169,7 @@
           </main>
         </div>
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
@@ -184,7 +184,7 @@
           </main>
         </div>
         <div class="card">
-          <img class="card__image" scr="Imagewebpage.png" alt="Project Image" width="700px" />
+          <img class="card__image" src="Imagewebpage.png"  alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">Client Project</h3>
