added style to the footer

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <button class="card__button">Code <img class="card__button--image" src="VectorcodeSymbol.png" alt="Code Symbol"  ></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
         <div class="card">
@@ -131,8 +131,8 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
         <div class="card">
@@ -146,8 +146,10 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <div id="buttons">
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            </div>
           </main>
         </div>
       </div>
@@ -164,8 +166,8 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
         <div class="card">
@@ -179,8 +181,8 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
         <div class="card">
@@ -194,18 +196,18 @@
               eaque quidem voluptates nam tempora temporibus iste culpa cumque
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
-            <button class="card__button">Code</button>
-            <button class="card__button--secondary">Preview</button>
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
       </div>
 
       <br />
-      <footer id="get-in-touch">
-        <button>Github</button>
-        <button>LinkedIn</button>
-        <button>CV</button>
-        <a href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
+      <footer id="get-in-touch" class="footer">
+        <button class="footer__github">Github</button>
+        <button class="footer__linkedin">LinkedIn</button>
+        <button class="footer__cv">CV</button>
+        <a class="footer__emial" href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
       </footer>
     </main>
     <aside></aside>
