--- a/index.html
+++ b/index.html
@@ -204,10 +204,12 @@
 
       <br />
       <footer id="get-in-touch" class="footer">
-        <button class="footer__github">Github</button>
-        <button class="footer__linkedin">LinkedIn</button>
-        <button class="footer__cv">CV</button>
-        <a class="footer__emial" href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
+        <div class="footer__images">
+          <img src="Group 61LogoGithub.png" alt="Github Logo">
+          <img src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo">
+          <img src="Group 39808Logo_CV.png" alt="CV">
+        </div>
+        <a class="footer__email" href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
       </footer>
     </main>
     <aside></aside>
