added get in tough button to nav bar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <p>Katherine Villacis</p>
-      <a href="#home">Home</a>
-      <a href="#about-me">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#get-in-touch">Get In Touch</a>
+      <h1 class="nav-bar__name">Katherine Villacis</h1>
+      <a class="nav-bar__home" href="#home">Home</a>
+      <a class="nav-bar__about" href="#about-me">About</a>
+      <a class="nav-bar__projects" href="#projects">Projects</a>
+      <button class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</button>
+      <!-- <a class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</a> -->
     </nav>
     <header class="intro">
       <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
