completed nav bar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <a class="nav-bar__home" href="#home">Home</a>
       <a class="nav-bar__about" href="#about-me">About</a>
       <a class="nav-bar__projects" href="#projects">Projects</a>
-      <button class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</button>
-      <!-- <a class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</a> -->
+      <!-- <button class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</button> -->
+      <a class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</a>
     </nav>
     <header class="intro">
       <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
