--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <header class="intro">
       <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
-      <h2 class="into__occupation">
+      <h2 class="intro__occupation">
         A Junior Software Developer based in London, England.
       </h2>
       <img
