added grid layout to about section

--- a/index.html
+++ b/index.html
@@ -37,24 +37,27 @@
           alt="Katherine"
           width="300px"
         />
-        <p class="about__paragraph">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo
-          autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam
-          commodi laboriosam sint cupiditate quas rerum quasi officia deleniti
-          tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing
-          elit. Magnam, consectetur aspernatur laboriosam animi libero id
-          assumenda similique dolorum nemo laudantium soluta sunt deleniti
-          corporis qui distinctio repudiandae ipsa, quia esse.
-        </p>
-        <p class="about__paragraph">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
-          expedita delectus, soluta a natus tenetur pariatur iure ipsum porro,
-          consequuntur cupiditate eum officiis corporis quidem necessitatibus
-          corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam
-          a? A error sequi, culpa officia, recusandae facilis ex cumque enim
-          aperiam et maxime, soluta at!
-        </p>
+        <div class="about__paragraph">
+          <p >
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo
+            autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam
+            commodi laboriosam sint cupiditate quas rerum quasi officia deleniti
+            tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Magnam, consectetur aspernatur laboriosam animi libero id
+            assumenda similique dolorum nemo laudantium soluta sunt deleniti
+            corporis qui distinctio repudiandae ipsa, quia esse.
+          </p>
+          <br>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+            expedita delectus, soluta a natus tenetur pariatur iure ipsum porro,
+            consequuntur cupiditate eum officiis corporis quidem necessitatibus
+            corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam
+            a? A error sequi, culpa officia, recusandae facilis ex cumque enim
+            aperiam et maxime, soluta at!
+          </p>
+        </div>
       </div>
       <div class="skills">
         <h4 class="skills__title">Technical SKills</h4>
