completed skills section for desktop

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="skills">
-        <h4 class="skills__title">Technical SKills</h4>
+        <h4 class="skills__title">Technical Skills</h4>
         <p class="skills__intro">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
           reiciendis minus magnam laudantium nam, quia obcaecati corrupti
