undid changes to projects desktop styling

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         </div>
       </div>
 
-      <div id="projects">
-        <h1>My Projects</h1>
+      <div id="projects" class="projects">
+        <h1 class="projects__title" >My Projects</h1>
         <div class="card">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <div id="projects__secondary">
+      <div id="projects__secondary" class="projects__secondary">
         <div class="card">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
